Ignore 0-size resolutions when requesting video-input capabilities.

Some video-capture devices with faulty device drivers report resolutions
of 0x0. These devices are then rejected by the constraints processing
algorithm of getUserMedia since they are considered unable to support
any video mode selected by the algorithm.

By discarding these invalid formats, a fallback list of standard video
modes will be used instead, just like with devices that do not report
any video mode.

Bug: 733859, 740505
Change-Id: Idc6610ad9abde02bf139736da0f7e183f8fcab6d
Reviewed-on: https://chromium-review.googlesource.com/615246
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Reviewed-by: Christian Fremerey <chfremer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494764}
Former-commit-id: 9c77470ff34bac937ceb765a27cee1703f0f2426